force-app/main/default/objects/Thread__c/Thread__c.object-meta.xml
<CustomObject>
    <label>Thread</label>
    <pluralLabel>Threads</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Thread Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 