force-app/main/default/objects/Thread__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Threads Authored</relationshipLabel>
    <relationshipName>ThreadsAuthored</relationshipName>
    <type>Lookup</type>
</CustomField> 