force-app/main/default/objects/Thread__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Threads</relationshipLabel>
    <relationshipName>Threads</relationshipName>
    <type>Lookup</type>
</CustomField> 