force-app/main/default/objects/Thread__c/fields/LastCommentDate__c.field-meta.xml
<CustomField>
    <fullName>LastCommentDate__c</fullName>
    <label>Last Comment Date</label>
    <type>DateTime</type>
</CustomField> 